[gd_scene load_steps=2 format=3 uid="uid://dnn12yk63bxl0"]

[ext_resource type="Script" path="res://UI/AppMenuBar.gd" id="1_bhkmr"]

[node name="MenuBar" type="Panel" node_paths=PackedStringArray("file_menu", "edit_menu", "view_menu", "help_menu")]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("1_bhkmr")
file_menu = NodePath("MenuBar/File")
edit_menu = NodePath("MenuBar/Edit")
view_menu = NodePath("MenuBar/View")
help_menu = NodePath("MenuBar/Help")
menu_height = 32

[node name="MenuBar" type="MenuBar" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="File" type="PopupMenu" parent="MenuBar"]
title = "File"
size = Vector2i(100, 116)
item_count = 4
item_0/text = "Open"
item_0/id = 0
item_1/text = "Save"
item_1/id = 1
item_2/text = ""
item_2/id = 3
item_2/separator = true
item_3/text = "Quit"
item_3/id = 2

[node name="Edit" type="PopupMenu" parent="MenuBar"]
title = "Edit"
item_count = 7
item_0/text = "Undo"
item_0/id = 3
item_1/text = "Redo"
item_1/id = 4
item_2/text = ""
item_2/id = 5
item_2/separator = true
item_3/text = "Add"
item_3/id = 0
item_4/text = "Remove"
item_4/id = 1
item_5/text = "Clear"
item_5/id = 2
item_6/text = "Select all"
item_6/id = 6

[node name="View" type="PopupMenu" parent="MenuBar"]
item_count = 2
item_0/text = "Hide UI"
item_0/checkable = 1
item_0/id = 1
item_1/text = "Full screen"
item_1/checkable = 1
item_1/id = 0

[node name="Help" type="PopupMenu" parent="MenuBar"]
title = "Edit"
item_count = 1
item_0/text = "About Symmetar"
item_0/id = 0

[connection signal="index_pressed" from="MenuBar/File" to="." method="_on_file_index_pressed"]
[connection signal="index_pressed" from="MenuBar/Edit" to="." method="_on_edit_index_pressed"]
[connection signal="index_pressed" from="MenuBar/View" to="." method="_on_view_index_pressed"]
[connection signal="index_pressed" from="MenuBar/Help" to="." method="_on_help_index_pressed"]
